--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-    
+    <div class="homepage">
+    <header>  
+        <div class="header">
+            Picchi's Corner
+            <a href="product.html">Product</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </header>
-</body>
+    <div class="section">
+        <section><a href="italian.html">ITALIAN</a></section>
+        <section><a href="korean.html">KOREAN</a></section>
+        <section><a href="bengali.html">BENGALI</a></section>
+    </div>
+    <div class="home-photo">
+        <img src="italian.jpeg" alt="Italian" height="100px" width="50%">
+        <img src="korean.jpeg" alt="Korean" height="100px" width="50%">
+        <img src="bengali.jpeg" alt="Bengali" height="100px" width="50%">
+    </div>
+    <div class="footer">
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+    </div>
+    </div> 
+</body>   
 </html>
