9029Update index.html

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         <section><a href="bengali.html">BENGALI</a></section>
     </div>
 
-    <!-- Image Display Section with Caption -->
+    <!-- Image Display Section with Text on Images -->
     <div class="home-photo">
-        <figure class="image-container">
+        <div class="image-container">
             <img src="italian.jpeg" alt="Italian Cuisine" class="image">
-            <figcaption>Italian Cuisine</figcaption>
-        </figure>
+            <div class="image-text">Italian Cuisine</div>
+        </div>
 
-        <figure class="image-container">
+        <div class="image-container">
             <img src="korean.jpeg" alt="Korean Cuisine" class="image">
-            <figcaption>Korean Cuisine</figcaption>
-        </figure>
+            <div class="image-text">Korean Cuisine</div>
+        </div>
 
-        <figure class="image-container">
+        <div class="image-container">
             <img src="bengali.jpeg" alt="Bengali Cuisine" class="image">
-            <figcaption>Bengali Cuisine</figcaption>
-        </figure>
+            <div class="image-text">Bengali Cuisine</div>
+        </div>
     </div>
 
     <!-- Footer Section -->
