--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,49 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Header Section (Dark Header) -->
-    <header class="dark-header">
+    <div class="homepage">
+    <header>  
         <div class="header">
-            <h1>Picchi's  Corner</h1>
-            <nav> <!-- Navigation links centered -->
-                <a href="product.html">Product</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+            Picchi's Corner
+            <a href="product.html">Product</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </div>
     </header>
-
-    <!-- Section for different product categories -->
     <div class="section">
         <section><a href="italian.html">ITALIAN</a></section>
         <section><a href="korean.html">KOREAN</a></section>
         <section><a href="bengali.html">BENGALI</a></section>
     </div>
-
-    <!-- Image Display Section with Text on Images -->
     <div class="home-photo">
-        <div class="image-container">
-            <img src="italian.jpeg" alt="Italian Cuisine" class="image">
-            <div class="image-text">Italian Cuisine</div>
-        </div>
-
-        <div class="image-container">
-            <img src="korean.jpeg" alt="Korean Cuisine" class="image">
-            <div class="image-text">Korean Cuisine</div>
-        </div>
-
-        <div class="image-container">
-            <img src="bengali.jpeg" alt="Bengali Cuisine" class="image">
-            <div class="image-text">Bengali Cuisine</div>
-        </div>
+        <img src="italian.jpeg" alt="Italian" height="100px" width="50%">
+        <img src="korean.jpeg" alt="Korean" height="100px" width="50%">
+        <img src="bengali.jpeg" alt="Bengali" height="100px" width="50%">
     </div>
-
-    <!-- Footer Section -->
-    <footer class="footer">
+    <div class="footer">
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Service</a>
-    </footer>
-
+    </div>
+    </div> 
 </body>   
 </html>
