this is ademo of ri 345
Co-authored-by: Muhtasim <Muhtasim19@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="homepage">
     <header>  
         <div class="header">
-            Picchi's Corner
+            <h1>Picchi's Corner</h1>
             <a href="product.html">Product</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
