--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 <body>
     <div class="homepage">
     <header>  
-        <div class="header">
-            <h1>Picchi's Corner</h1>
-            <a href="product.html">Product</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </div>
+        <img src="logo.jpeg">
     </header>
     <div class="section">
         <section><a href="italian.html">ITALIAN</a></section>
@@ -25,6 +20,11 @@
         <img src="italian.jpeg" alt="Italian" height="100px" width="50%">
         <img src="korean.jpeg" alt="Korean" height="100px" width="50%">
         <img src="bengali.jpeg" alt="Bengali" height="100px" width="50%">
+    </div>
+    <div class="header">
+        <a href="product.html">Product</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </div>
     <div class="footer">
         <a href="privacy.html">Privacy Policy</a>
