--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="homepage">
     <header>  
-        <img src="logo.jpeg">
-    </header>
+        <img src="picchis-corner-high-resolution-logo-white.png" height="300px" width="100%">
     <div class="section">
         <section><a href="italian.html">ITALIAN</a></section>
         <section><a href="korean.html">KOREAN</a></section>
         <section><a href="bengali.html">BENGALI</a></section>
     </div>
+    </header>
     <div class="home-photo">
         <img src="italian.jpeg" alt="Italian" height="100px" width="50%">
         <img src="korean.jpeg" alt="Korean" height="100px" width="50%">
