serUpdate index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <footer>
             <nav class="footer-nav">
                 <a href="privacy.html">Privacy Policy</a>
-                <a href="terms.html">Terms of Service</a>
+                <a href="service.html">Terms of Service</a>
             </nav>
         </footer>
     </div>
