perUpdate index.html

--- a/index.html
+++ b/index.html
@@ -8,33 +8,28 @@
 </head>
 <body>
     <div class="homepage">
-        <header>
-            <img src="picchis-corner-high-resolution-logo-white.png" alt="Picchi's Corner Logo" class="logo">
-            <nav class="nav-bar">
-                <a href="italian.html">Italian</a>
-                <a href="korean.html">Korean</a>
-                <a href="bengali.html">Bengali</a>
-            </nav>
-        </header>
-
-        <div class="home-photo">
-            <img src="italian.jpeg" alt="Delicious Italian cuisine" class="photo">
-            <img src="korean.jpeg" alt="Authentic Korean dishes" class="photo">
-            <img src="bengali.jpeg" alt="Traditional Bengali food" class="photo">
-        </div>
-
-        <nav class="main-nav">
-            <a href="product.html">Product</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-
-        <footer>
-            <nav class="footer-nav">
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="service.html">Terms of Service</a>
-            </nav>
-        </footer>
+    <header>  
+        <img src="picchis-corner-high-resolution-logo-white.png" height="300px" width="100%">
+    <div class="section">
+        <section><a href="italian.html">ITALIAN</a></section>
+        <section><a href="korean.html">KOREAN</a></section>
+        <section><a href="bengali.html">BENGALI</a></section>
     </div>
-</body>
+    </header>
+    <div class="home-photo">
+        <img src="italian.jpeg" alt="Italian" height="100px" width="50%">
+        <img src="korean.jpeg" alt="Korean" height="100px" width="50%">
+        <img src="bengali.jpeg" alt="Bengali" height="100px" width="50%">
+    </div>
+    <div class="header">
+        <a href="product.html">Product</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <div class="footer">
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+    </div>
+    </div> 
+</body>   
 </html>
