--- a/italian.html
+++ b/italian.html
@@ -12,12 +12,24 @@
 <figure>
     <img src="https://media.cnn.com/api/v1/images/stellar/prod/210211141204-05-classic-italian-dishes.jpg?q=w_1110,c_fill" width="150px" height="80px"> <figcaption>Classic Dish</figcaption>
 </figure>
+<div class="price-box">
+    $19.99
+</div>
+
 <figure>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7LFt9XZAWx414C-p-Uqot0Ki2M664BUEVjA&s" width="150px" height="80px"> <figcaption>Pasta</figcaption>
 </figure>
+<div class="price-box">
+    $19.99
+</div>
+
 <figure>
-    <img src="https://www.mashed.com/img/gallery/why-your-pizza-pie-comes-unsliced-when-dining-in-italy/l-intro-1692392380.jpg" width="150px" height="80px"> <figcaption>Pasta</figcaption>
+    <img src="https://www.mashed.com/img/gallery/why-your-pizza-pie-comes-unsliced-when-dining-in-italy/l-intro-1692392380.jpg" width="150px" height="80px"> <figcaption>Pizza</figcaption>
 </figure>
+<div class="price-box">
+    $19.99
+</div>
+
 </div>
 <a href="index.html" class="back-home-button">Back to Home</a>
 </body>
