--- a/korean.html
+++ b/korean.html
@@ -12,12 +12,24 @@
 <figure>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxw1gfdFezO9IAoxdKVfSgMsv_yR09GHnPow&s" width="150px" height="80px"> <figcaption>Beef Bulgugi</figcaption>
 </figure>
+<div class="price-box">
+    $19.99
+</div>
+
 <figure>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_ThQbcf0Asf_7Wfuu1a-Zb9l455MkqUStZQ&s" width="150px" height="80px"> <figcaption>Kimchi</figcaption>
 </figure>
+<div class="price-box">
+    $19.99
+</div>
+
 <figure>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREaVh0GHC7Jl2RKOjlEnK_SfHWtZiKElIqhg&s" width="150px" height="80px"> <figcaption>Ramen</figcaption>
 </figure>
+<div class="price-box">
+    $19.99
+</div>
+
 </div>
 <a href="index.html" class="back-home-button">Back to Home</a>
 </body>
