--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="homepage">
     <header>  
         <img src="picchis-corner-high-resolution-logo-white.png" height="300px" width="100%">
-    <div class="section">
+    <nav class="section">
         <section><a href="italian.html">ITALIAN</a></section>
         <section><a href="korean.html">KOREAN</a></section>
         <section><a href="bengali.html">BENGALI</a></section>
-    </div>
+    </nav>
     </header>
     <div class="home-photo">
         <img src="italian.jpeg" alt="Italian" height="100px" width="50%">
@@ -26,10 +26,12 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </div>
-    <div class="footer">
+    <footer class="footer">
         <a href="privacy.html">Privacy Policy</a>
         <a href="terms.html">Terms of Service</a>
-    </div>
+    </footer>
     </div> 
+
+    <script src="script.js"></script>
 </body>   
 </html>
