--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <div class="homepage">
-    <header>  
-        <img src="picchis-corner-high-resolution-logo-white.png" height="300px" width="100%">
-    <nav class="section">
-        <section><a href="italian.html">ITALIAN</a></section>
-        <section><a href="korean.html">KOREAN</a></section>
-        <section><a href="bengali.html">BENGALI</a></section>
-    </nav>
-    </header>
-    <div class="home-photo">
-        <img src="italian.jpeg" alt="Italian" height="100px" width="50%">
-        <img src="korean.jpeg" alt="Korean" height="100px" width="50%">
-        <img src="bengali.jpeg" alt="Bengali" height="100px" width="50%">
-    </div>
-    <div class="header">
-        <a href="product.html">Product</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </div>
-    <footer class="footer">
-        <a href="privacy.html">Privacy Policy</a>
-        <a href="terms.html">Terms of Service</a>
-    </footer>
+        <header>  
+            <img src="picchis-corner-high-resolution-logo-white.png" alt="Logo" height="300" style="max-width: 100%; height: auto;">
+            <nav class="section">
+                <section><a href="italian.html">ITALIAN</a></section>
+                <section><a href="korean.html">KOREAN</a></section>
+                <section><a href="bengali.html">BENGALI</a></section>
+            </nav>
+        </header>
+        <div class="home-photo">
+            <img src="italian.jpeg" alt="Italian" height="100" width="50%">
+            <img src="korean.jpeg" alt="Korean" height="100" width="50%">
+            <img src="bengali.jpeg" alt="Bengali" height="100" width="50%">
+        </div>
+        <div class="header">
+            <a href="product.html">Product</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <footer class="footer">
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms of Service</a>
+        </footer>
     </div> 
 
     <script src="script.js"></script>
