--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple E-Commerce Site</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="homepage">
@@ -33,5 +32,6 @@
     </footer>
     </div> 
 
+    <script src="script.js"></script>
 </body>   
 </html>
